<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/cv_margin"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cv_heigh"
    app:cardCornerRadius="4sp"
    android:id="@+id/cv_perrito_cv"

    android:layout_marginBottom="@dimen/cv_marginbot"
    android:elevation="@dimen/cv_elevation"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/cv_iv_perrito"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_height"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/cntDesc_cvFoto"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/teal_200"
        >

        <ImageButton
            android:id="@+id/cv_bn_Like"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="start"
            android:contentDescription="@string/cntDesc_cvLike"
            android:background="@android:color/transparent"
            />

        <Space
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:id="@+id/cv_txt_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cv_nombre" />

            <TextView
                android:id="@+id/cv_txt_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cv_desc"

                />

        </LinearLayout>

        <Space
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cv_bn_nFavs"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@android:drawable/btn_star_big_on"
            android:layout_gravity="end"
            android:text="@string/cv_totLikes"
            android:contentDescription="@string/cntDesc_cvNLikes"
            />

    </LinearLayout>




</LinearLayout>

</android.support.v7.widget.CardView>