<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="4sp"
    android:id="@+id/cv_perrito_cv"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/cv_iv_perrito___"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cntDesc_cvFoto"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/cv_bn_Like"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_gravity="start"
                android:contentDescription="@string/cntDesc_cvLike"
                />

            <Space
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:gravity="end">

                <TextView
                    android:id="@+id/cv_txt_nombre___"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cv_nombre" />

                <TextView
                    android:id="@+id/cv_txt_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cv_desc"

                    />

            </LinearLayout>

            <Space
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/cv_bn_nFavs"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_gravity="end"
                android:contentDescription="@string/cntDesc_cvNLikes"
                />

        </LinearLayout>




    </LinearLayout>

</android.support.v7.widget.CardView>


<!--
    <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="?android:attr/selectableItemBackground"
android:clickable="true"
android:focusable="true"
android:orientation="vertical"
    >

<ImageView
    android:id="@+id/cv_iv_perrito"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:contentDescription="@string/cntDesc_cvFoto"
    android:src="@drawable/ic_launcher_foreground"
    android:textStyle="bold"

    tools:ignore="ImageContrastCheck" />

<TextView
    android:id="@+id/cv_txt_nombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/cv_nombre"
    android:layout_below="@id/cv_iv_perrito" />


</RelativeLayout>

-->
